feat: implement unit tests for all business logic services and fix status enum compatibility